# kenyon-smith-central

./: EDUCATION.md  LearningNotes.txt  README.md  sample_vimrc
commonlib/: CMakeLists.txt
commonlib/include/: commonversioninfo.h.in  crc.hpp  hexUtils.hpp  logger.hpp  version.hpp
commonlib/src/: CMakeLists.txt  crc.cpp  hexUtils.cpp  logger.cpp  version.cpp
journal/: .coverage  .gitignore  journal.py  test_journal.py
sample-c++/: CMakeLists.txt
sample-c++/include/: .asyncAppSettings.hpp.swp  sampleAppSettings.hpp
sample-c++/src/: .async.cpp.swp  .asyncAppSettings.cpp.swp  CMakeLists.txt  sample.cpp  sampleAppSettings.cpp
