#################################################################################
# CMakeLists.txt file 
#
# Revision History
# May 17, 2019  K. Smith     / Initial Implementation
#################################################################################

cmake_minimum_required(VERSION 3.1)
project(sample-c++)
add_subdirectory(src)
